<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/appearance_header">

        <SwitchPreferenceCompat
            app:key="night_mode"
            app:title="@string/theme_title"/>

        <ListPreference
            app:key="header_image"
            app:defaultValue="normal"
            app:entries="@array/image_entries"
            app:entryValues="@array/image_values"
            android:defaultValue="1"
            app:title="@string/header_image"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/advanced_header">

        <SwitchPreferenceCompat
            app:key="dev_mode"
            app:title="@string/dev_title" />
        <Preference
            app:key="open_log"
            app:dependency="dev_mode"
            app:title="@string/log_title"
            app:summary="@string/log_summary"/>

    </PreferenceCategory>

</PreferenceScreen>