<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_term">

    <fragment
        android:id="@+id/nav_term"
        android:name="by.bstu.vs.stpms.lablistsqlite.ui.term.TermFragment"
        android:label="@string/menu_term"
        tools:layout="@layout/fragment_term" >
        <action
            android:id="@+id/action_nav_term_to_nav_subject"
            app:destination="@id/nav_subject"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_subject"
        android:name="by.bstu.vs.stpms.lablistsqlite.ui.subject.SubjectFragment"
        android:label="@string/menu_subject"
        tools:layout="@layout/fragment_subject" >
        <action
            android:id="@+id/action_nav_subject_to_nav_lab"
            app:destination="@id/nav_lab"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <argument
            android:name="termId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_lab"
        android:name="by.bstu.vs.stpms.lablistsqlite.ui.lab.LabFragment"
        android:label="@string/menu_lab"
        tools:layout="@layout/fragment_lab" >
        <argument
            android:name="subjectId"
            app:argType="integer" />
        <action
            android:id="@+id/action_nav_lab_to_labDetailsFragment"
            app:destination="@id/labDetailsFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_nav_lab_to_labCreateFragment"
            app:destination="@id/labCreateFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>
    <fragment
        android:id="@+id/labDetailsFragment"
        android:name="by.bstu.vs.stpms.lablistsqlite.ui.lab.LabDetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_lab_details" >
        <argument
            android:name="labId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/labCreateFragment"
        android:name="by.bstu.vs.stpms.lablistsqlite.ui.lab.LabCreateFragment"
        android:label="@string/create_lab" >
        <argument
            android:name="lab"
            app:argType="by.bstu.vs.stpms.lablistsqlite.model.entity.Lab"
            android:defaultValue="@null"
            app:nullable="true" />
        <argument
            android:name="subjectId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="by.bstu.vs.stpms.lablistsqlite.ui.settings.SettingsFragment"
        android:label="Settings" >
        <action
            android:id="@+id/action_nav_settings_to_nav_log"
            app:destination="@id/nav_log"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>
    <fragment
        android:id="@+id/nav_log"
        android:name="by.bstu.vs.stpms.lablistsqlite.ui.settings.LogFragment"
        android:label="Log"
        tools:layout="@layout/fragment_log" />
</navigation>